# LtChat

./: docker-compose.yml  ws_test.html
backend/: Dockerfile  check_user.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 79a64057b2bd_init.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  channels.py  guilds.py  presence.py  ws.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  channel.py  channel_member.py  guild.py  guild_member.py  message.py  user.py
backend/app/schemas/: auth.py  guild.py
backend/app/services/: kafka_consumer.py  kafka_producer.py  presence_service.py  websocket_manager.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/chat/channels/[channelId]/: page.tsx
frontend/src/app/chat/guilds/[guildId]/channels/[channelId]/: page.tsx
frontend/src/components/chat/: MessageBubble.tsx  TypingIndicator.tsx
frontend/src/components/guild/: MemberList.tsx
frontend/src/components/navigation/: TopBar.tsx
frontend/src/components/sidebar/: ChannelList.tsx  ServerList.tsx  UserPanel.tsx
frontend/src/components/ui/: card.tsx
frontend/src/hooks/: usePresence.ts  useWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/store/: authStore.ts  messagesStore.ts  presenceStore.ts  sidebarStore.ts  themeStore.ts
